--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -6,9 +6,9 @@
 .kpibox{
   width: 150px;
   height:150px;
-  background-color: #f4f4f4;
-  border-radius: 0px;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  border-radius: 4px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 }
 
 .graph-bar {
