--- a/app/views/shared/_myinvestmentclosed_card.html.erb
+++ b/app/views/shared/_myinvestmentclosed_card.html.erb
@@ -1,39 +1,44 @@
-<% @closed.each do |investment| %>
-<div class="card-wrapper">
-  <div class="card-investment">
-    <div class="position-relative" style="text-align: center;">
-      <img class="card-pic"src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="food pic">
-      <div style="position:absolute;bottom:20px;left:20px;font-size:35px; color: white;"><%= investment.campaign.company.name %>
-      </div>
+<div class="container">
+  <% if @closed.empty? %>
+    <h3 class="my-3">It looks like you haven't invested in any campaigns yet, <%= current_user.first_name%></h3>
+    <h3>Do you want to Invest in a campaign?</h3>
+
+    <div>
+      <%= link_to "Invest Now", campaigns_path, class:"btn btn-sm btn-outline-secondary" %>
     </div>
-      <% days_left = ((investment.campaign.expiry_date - Time.now)/86400).round(0) %>
-      <% if days_left >= 0 %>
-      <h5><%= ((investment.campaign.expiry_date - Time.now)/86400).round(0)%> days left</h5>
-      <% else %>
-      <h5> Investment Closed </h5>
-      <% end %>
-      <% raised = Investment.where(campaign_id: investment.campaign.id).sum("amount") %>
-      <% target = investment.campaign.min_target %>
-      <% status = ((raised.to_f/target)*100).round(1) %>
-      <div class="box-align" >
-        <h4>Campaign Overview</h4>
-          <ul class="patient-item">
-            <li><p style="font-size: 16px";>Campaign target: $ <%= number_with_delimiter(investment.campaign.min_target, :delimiter => ',') %></p> </li>
-            <li><p style="font-size: 16px";> Funding Status: <%= status %> % ($ <%= raised %>)</p></li>
-            <li><p style="font-size: 16px";> #Investors:  <%= Investment.where(campaign_id: investment.campaign.id).count %></p> </li>
-            <li><p style="font-size: 16px";>Avge Inv Rate <%= (investment.campaign.return_rate*100).round(1)  %> %</p> </li>
-            <li><p style="font-size: 16px";>Exp.Date <%= (investment.campaign.expiry_date)&.strftime("%m/%d/%Y")  %> </p> </li>
-          </ul>
-        <h4>Your Investment </h4>
-          <ul class="patient-item">
-            <li><p style="font-size: 16px";>Your current investment: $ <%= investment.amount %> </p></li>
-            <% if investment.payment_date.nil? %>
-            <li><p style="font-size: 16px";> Payment date: Pending </p></li>
-            <% else %>
-            <li><p style="font-size: 16px";> Payment date: <%= investment.payment_date&.strftime("%m/%d/%Y") %></p></li>
-            <% end %>
-          </ul>
-      </div>
-  </div>
+  <% else %>
+
+    <h2 class="mt-4"> Places you funded! :)</h2>
+    <table class="table table-hover mt-4 text-center">
+      <thead>
+        <tr>
+          <th scope="col">Restaurant</th>
+          <th scope="col">Campaign target</th>
+          <th scope="col">Total # Investors</th>
+          <th scope="col">Avge Inv Rate</th>
+          <th scope="col">Exp.Date</th>
+          <th scope="col">Your investment</th>
+          <th scope="col">Investment Date</th>
+
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @closed.each_with_index do |investment, index| %>
+           <tr class="<%= index.even? ? 'bg-light' : '' %>">
+            <!-- <th scope="row"><%= investment.id %></th> -->
+            <td><%= investment.campaign.company.name %></td>
+            <td>$ <%= number_with_delimiter(investment.campaign.min_target, :delimiter => ',') %></td>
+            <td><%= Investment.where(campaign_id: investment.campaign.id).count %></td>
+            <td><%= (investment.campaign.return_rate*100).round(1)  %> %</td>
+            <td><%= (investment.campaign.expiry_date)&.strftime("%m/%d/%Y")  %></td>
+
+            <td>$ <%= number_with_delimiter(investment.amount, :delimiter => ',') %> </td>
+            <td><%= investment.payment_date&.strftime("%m/%d/%Y") %></td>
+
+            </tr>
+        <% end %>
+      </tbody>
+    </table>
+  <% end %>
 </div>
-<% end %>
