--- a/app/views/investments/dashboard.html.erb
+++ b/app/views/investments/dashboard.html.erb
@@ -7,14 +7,25 @@
 
     <div class="col-md-10 col-lg-10 p-0">
 
+      <h2 class="m-4"> Welcome to your dashboard <%= current_user.first_name %>!</h2>
+
       <!-- KPIs BOX-->
-      <div class="d-flex justify-content-around align-items-center m-4" style="height: 150px;" id="page-content-wrapper">
+      <div class="d-flex justify-content-between align-items-center mr-4 mt-4" style="height: 150px;" id="page-content-wrapper">
         <!-- Insert cardsinfo -->
         <div class="card-campaign-status kpibox m-5">
           <div class="d-flex mt-4 justify-content-around align-items-center">
             <div class="text-center">
               <h2 class="m-3 kpidash"><%= number_with_delimiter(@investments.where.not(payment_date: nil).sum(:amount), :delimiter => ',')%></h2>
               <h2 class="text-secondary mb-2" style="font-size: 20px;">$ Invested</h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="card-campaign-status kpibox m-5">
+          <div class="d-flex mt-4 justify-content-around align-items-center">
+            <div class="text-center">
+              <h2 class="m-3 kpidash"><%= number_with_delimiter(@investments.last.amount, :delimiter => ',')%></h2>
+              <h2 class="text-secondary mb-2" style="font-size: 20px;">$ Last investment</h2>
             </div>
           </div>
         </div>
@@ -37,6 +48,8 @@
             </div>
           </div>
         </div>
+
+
       </div>
 
       <div class="d-flex graph-container">
