--- a/app/views/pages/_carousel.html.erb
+++ b/app/views/pages/_carousel.html.erb
@@ -5,8 +5,9 @@
 
       <div id="carouselExampleInterval" class="box-shadow carousel slide align-items-center" data-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-interval="10000">
+          <div class="carousel-item active align-items-end position-relative" data-interval="10000">
             <img src="https://images.unsplash.com/photo-1556910103-1c02745aae4d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100 carousel-img object-fit-cover" alt="restaurant pic">
+            <div class="img-subheading text-center bg-dark position-absolute">100 places funded</div>
           </div>
           <div class="carousel-item" data-interval="2000">
             <img src="https://images.unsplash.com/photo-1552302894-3b4f7275229c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100 carousel-img object-fit-cover" alt="chef pic">
