--- a/app/views/pages/_hometext.html.erb
+++ b/app/views/pages/_hometext.html.erb
@@ -9,7 +9,7 @@
     <div class="d-flex">
       <a><%= link_to "Start investing", "/campaigns", class: "btn route-button-full px-4 py-2 mr-3" %></a>
 
-      <a><%= link_to "Start raising", "#", class: "btn route-button-outline px-4 py-2" %></a>
+      <a><%= link_to "Start raising", "/raising", class: "btn route-button-outline px-4 py-2" %></a>
     </div>
   </div>
 </div>
