--- a/app/views/pages/_cta.html.erb
+++ b/app/views/pages/_cta.html.erb
@@ -17,18 +17,15 @@
 </div> -->
 
 
-<div class="row d-flex mt-0 bg-light" style="top: -60px;">
-  <div class="col-12 home-cta d-flex justify-content-center">
-    <div class="choose-option d-flex align-items-center bg-white">
-<!--
-      <div class="d-flex flex-column w-50 justify-content-center text-center">
+    <div class="fundeat-figures choose-option d-flex justify-content-around align-items-center bg-white w-100 position-absolute" style="bottom: -95px;">
+      <!-- <div class="d-flex flex-column w-50 justify-content-center text-center">
         <h5>Interested in Investing?</h5>
         <h5><%= link_to "Investments", "/campaigns", class: "btn btn-sm btn-success px-5" %></h5>
       </div> -->
 
-      <div class="col-12 col-md-4 text-center border-bottom border-md-0 border-secondary kpi">
+      <div class="text-center border-bottom border-md-0 border-secondary kpi">
         <h2 class="font-weight-bold "  >70k</h2>
-        <h6>Since last investment</h6>
+        <h6 class="text-secondary">Since last investment</h6>
       </div>
 
       <div class="h-75 align-self-center" style="border: 1px solid lightgrey"></div>
@@ -38,19 +35,17 @@
         <h5><%= link_to "Raising", "#", class: "btn btn-sm btn-success px-5" %></h5>
       </div> -->
 
-      <div class="col-12 col-md-4 text-center border-bottom border-md-0 border-secondary">
+      <div class="text-center border-bottom border-md-0 border-secondary">
         <h2 class="font-weight-bold">23</h2>
-        <h6>Restaurants funded</h6>
+        <h6 class="text-secondary">Restaurants funded</h6>
       </div>
 
       <div class="h-75 align-self-center" style="border: 1px solid lightgrey"></div>
 
-      <div class="col-12 col-md-4 text-center border-bottom border-md-0 border-secondary">
+      <div class="text-center border-bottom border-md-0 border-secondary">
         <h2 class="font-weight-bold" >681</h2>
-        <h6>investors served</h6>
+        <h6 class="text-secondary">investors served</h6>
       </div>
 
     </div>
-  </div>
-</div>
 
