--- a/app/views/shared/_myinvestmentopen_card.html.erb
+++ b/app/views/shared/_myinvestmentopen_card.html.erb
@@ -13,11 +13,9 @@
       <thead>
         <tr>
           <th scope="col">Restaurant</th>
-          <th scope="col">Campaign target</th>
-          <th scope="col">Total # Investors</th>
-          <th scope="col">Avge Inv Rate</th>
-          <th scope="col">Your investment</th>
+          <th scope="col">Int Rate</th>
           <th scope="col">Invest. Date</th>
+          <th scope="col">Your investment</th>
           <th scope="col">Days to launch </th>
         </tr>
       </thead>
@@ -28,12 +26,9 @@
            <tr class="<%= index.even? ? 'bg-light' : '' %>">
             <!-- <th scope="row"><%= investment.id %></th> -->
             <td><%= investment.campaign.company.name %></td>
-            <td>$ <%= number_with_delimiter(investment.campaign.min_target, :delimiter => ',') %></td>
-            <td><%= Investment.where(campaign_id: investment.campaign.id).count %></td>
-            <td><%= (investment.campaign.return_rate*100).round(1)  %> %</td>
-
-            <td>$ <%= number_with_delimiter(investment.amount, :delimiter => ',') %> </td>
+            <td><%= (investment.campaign.return_rate*100).round(1) %> %</td>
             <td><%= investment.payment_date&.strftime("%m/%d/%Y") %></td>
+            <td>$ <%= number_with_delimiter(investment.amount, :delimiter => ',') %> </td>
 
             <% if days_left >= 2 %>
               <td><h5 class="m-0"><span class="badge badge-open "> <%= days_left%> days left  </span></h5></td>
@@ -45,6 +40,14 @@
 
             </tr>
         <% end %>
+
+          <tr>
+            <td>Total</td>
+            <td></td>
+            <td></td>
+            <td>$ <%= number_with_delimiter(@sum_open_campaign_amount, :delimiter => ',') %></td>
+            <td></td>
+          </tr>
       </tbody>
     </table>
   <% end %>
