--- a/app/views/shared/_myinvestmentclosed_card.html.erb
+++ b/app/views/shared/_myinvestmentclosed_card.html.erb
@@ -19,11 +19,16 @@
         </tr>
       </thead>
 
+
+
+
       <tbody>
         <% @closed.each_with_index do |investment, index| %>
            <tr class="<%= index.even? ? 'bg-light' : '' %>">
-            <!-- <th scope="row"><%= investment.id %></th> -->
-            <td><%= investment.campaign.company.name %></td>
+
+              <td><%= link_to investment.campaign.company.name, campaign_path(investment.campaign) %></td>
+
+            <!-- <td><%#= investment.campaign.company.name %></td> -->
             <td><%= (investment.campaign.return_rate*100).round(1)  %> %</td>
             <td><%= investment.payment_date&.strftime("%m/%d/%Y") %></td>
             <td>$ <%= number_with_delimiter(investment.amount, :delimiter => ',') %> </td>
