--- a/app/views/shared/_myinvestmentopen_card.html.erb
+++ b/app/views/shared/_myinvestmentopen_card.html.erb
@@ -25,7 +25,7 @@
            <% days_left = ((investment.campaign.expiry_date - Time.now)/86400).round(0) %>
            <tr class="<%= index.even? ? 'bg-light' : '' %>">
             <!-- <th scope="row"><%= investment.id %></th> -->
-            <td><%= investment.campaign.company.name %></td>
+            <td><%= link_to investment.campaign.company.name, campaign_path(investment.campaign) %></td>
             <td><%= (investment.campaign.return_rate*100).round(1) %> %</td>
             <td><%= investment.payment_date&.strftime("%m/%d/%Y") %></td>
             <td>$ <%= number_with_delimiter(investment.amount, :delimiter => ',') %> </td>
