--- a/app/views/investments/dashboard.html.erb
+++ b/app/views/investments/dashboard.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid p-0">
   <div class="row">
 
-    <div class="col-md-2 col-lg-2 p-0">
+    <div class="col-md-2 col-lg-2">
       <%= render '/shared/investor_dashboard_sidebar' %>
     </div>
 
