Amended seeds & rounding issues

--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -84,7 +84,7 @@
         <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
         </div>
         <div class="text-center">
-          <h4><%= (campaign.return_rate*100) %>%</h4>
+          <h4><%= (campaign.return_rate*100).round(2) %>%</h4>
           <p>interest</p>
         </div>
         <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
