--- a/app/views/shared/_myinvestmentclosed_card.html.erb
+++ b/app/views/shared/_myinvestmentclosed_card.html.erb
@@ -9,8 +9,8 @@
   <% else %>
 
     <h2 class="mt-4"> Places you funded! :)</h2>
-    <table class="table table-hover mt-4 text-center">
-      <thead>
+    <table class="table mt-4 text-center">
+      <thead class="table-secondary">
         <tr>
           <th scope="col">Restaurant Campaign</th>
           <th scope="col">Int Rate</th>
@@ -19,19 +19,17 @@
         </tr>
       </thead>
 
-
-
-
       <tbody>
         <% @closed.each_with_index do |investment, index| %>
-           <tr class="<%= index.even? ? 'bg-light' : '' %>">
-            <td><%= link_to investment.campaign.company.name, campaign_path(investment.campaign) %></td>
+           <tr class="<%= index.odd? ? 'bg-light' : '' %>">
+            <td><%= link_to investment.campaign.company.name, campaign_path(investment.campaign),class: "wrapper-link2" %></td>
+            <!-- <td><%#= investment.campaign.company.name %></td> -->
             <td><%= (investment.campaign.return_rate*100).round(1)  %> %</td>
             <td><%= investment.payment_date&.strftime("%m/%d/%Y") %></td>
             <td>$ <%= number_with_delimiter(investment.amount, :delimiter => ',') %> </td>
             </tr>
         <% end %>
-          <tr>
+          <tr class="table-active">
             <td>Total</td>
             <td></td>
             <td></td>
