--- a/app/views/shared/_myinvestmentopen_card.html.erb
+++ b/app/views/shared/_myinvestmentopen_card.html.erb
@@ -9,8 +9,8 @@
   <% else %>
 
     <h2 class="mt-4"> Your opened investments, waiting to be launched!</h2>
-    <table class="table table-hover mt-4 text-center">
-      <thead>
+    <table class="table mt-4 text-center">
+      <thead class="table-secondary">
         <tr>
           <th scope="col">Restaurant Campaign</th>
           <th scope="col">Int Rate</th>
@@ -23,9 +23,9 @@
       <tbody>
         <% @open.each_with_index do |investment, index| %>
            <% days_left = ((investment.campaign.expiry_date - Time.now)/86400).round(0) %>
-           <tr class="<%= index.even? ? 'bg-light' : '' %>">
+           <tr class="<%= index.odd? ? 'bg-light' : '' %>">
             <!-- <th scope="row"><%= investment.id %></th> -->
-            <td><%= link_to investment.campaign.company.name, campaign_path(investment.campaign) %></td>
+            <td><%= link_to investment.campaign.company.name, campaign_path(investment.campaign),class: "wrapper-link2" %></td>
             <td><%= (investment.campaign.return_rate*100).round(1) %> %</td>
             <td><%= investment.payment_date&.strftime("%m/%d/%Y") %></td>
             <td>$ <%= number_with_delimiter(investment.amount, :delimiter => ',') %> </td>
@@ -41,7 +41,7 @@
             </tr>
         <% end %>
 
-          <tr>
+          <tr class="table-active">
             <td>Total</td>
             <td></td>
             <td></td>
