updated owner dashboard

--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -11,6 +11,11 @@
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 }
 
+.kpibox-green {
+  border: 0.5px solid rgb(23, 173, 44);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+}
+
 .graph-bar {
 
  // position:absolute;
