--- a/app/views/campaigns/owners_dashboard.html.erb
+++ b/app/views/campaigns/owners_dashboard.html.erb
@@ -7,7 +7,7 @@
   <div class="col-md-10 col-lg-10 p-0">
 
     <div class="text-center mt-5">
-      <h4>Campaign dashboard for <strong><%= @company.name%> </strong></h4>
+      <h4>Campaign dashboard for <strong><%= @company.name%> </gstrong></h4>
       <%= link_to "Live view", campaign_path(@company.campaign),  class: "mt-4 btn btn-outline-success"%>
     </div>
 
