--- a/app/assets/stylesheets/components/_card-investment.scss
+++ b/app/assets/stylesheets/components/_card-investment.scss
@@ -88,6 +88,8 @@
 progress[value]::-webkit-progress-value {
   background-image:
   -webkit-linear-gradient(left, $fundeatlogo-green, $fundeatlogo-green);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+
 }
 
 progress[value]::-webkit-progress-bar {
