--- a/app/views/pages/_cta.html.erb
+++ b/app/views/pages/_cta.html.erb
@@ -17,15 +17,15 @@
 </div> -->
 
 
-    <div class="fundeat-figures choose-option d-flex justify-content-around align-items-center bg-white w-100 position-absolute" style="bottom: -95px;">
+    <div class="fundeat-figures px-4 choose-option d-flex justify-content-around align-items-center bg-white w-100 position-absolute" style="bottom: -120px;">
       <!-- <div class="d-flex flex-column w-50 justify-content-center text-center">
         <h5>Interested in Investing?</h5>
         <h5><%= link_to "Investments", "/campaigns", class: "btn btn-sm btn-success px-5" %></h5>
       </div> -->
 
       <div class="text-center border-bottom border-md-0 border-secondary kpi">
-        <h2 class="font-weight-bold "  >70k</h2>
-        <h6 class="text-secondary">Since last investment</h6>
+        <h2 class="font-weight-bold" style="color: rgb(23,173,44)">$ 4.2 m</h2>
+        <h6 class="text-secondary">Total Funding Value</h6>
       </div>
 
       <div class="h-75 align-self-center" style="border: 1px solid lightgrey"></div>
@@ -36,15 +36,15 @@
       </div> -->
 
       <div class="text-center border-bottom border-md-0 border-secondary">
-        <h2 class="font-weight-bold">23</h2>
+        <h2 class="font-weight-bold" style="color: rgb(23,173,44)">100+</h2>
         <h6 class="text-secondary">Restaurants funded</h6>
       </div>
 
       <div class="h-75 align-self-center" style="border: 1px solid lightgrey"></div>
 
       <div class="text-center border-bottom border-md-0 border-secondary">
-        <h2 class="font-weight-bold" >681</h2>
-        <h6 class="text-secondary">investors served</h6>
+        <h2 class="font-weight-bold" style="color: rgb(23,173,44)">7,000+</h2>
+        <h6 class="text-secondary">Investors onboard</h6>
       </div>
 
     </div>
