--- a/app/views/pages/_hometext.html.erb
+++ b/app/views/pages/_hometext.html.erb
@@ -2,7 +2,7 @@
 <div class="">
   <div class="h-100 mr-5 pr-5">
     <div>
-      <h1 class="my-3"><span class="font-weight-bold">FUND</span> your local places where you enjoy to <span class="font-weight-bold">EAT</span></h1>
+      <h1 class="my-3"><span class="font-weight-bold" style="color: rgb(23,173,44)">FUND</span> your local places where you enjoy to <span class="font-weight-bold" style="color: rgb(23,173,44)">EAT</span></h1>
       <!-- <h4>We love the ambitious, the creative and the determined restaurants who are on a mission to leave a mark on Argentina</h4> -->
       <h6 class="my-5 pr-5 text-secondary">Fundeat enables Restaurants to easily raise money and gives private investors the opportunity to sustainably invest in their local community</h6>
     </div>
