--- a/app/views/campaigns/raising.html.erb
+++ b/app/views/campaigns/raising.html.erb
@@ -40,10 +40,10 @@
 
         <div class="d-flex flex-column align-self-center">
           <div class="ml-4 mt-5 mb-2 d-flex align-items-center">
-            <i class="fas fa-store icon-style"></i>
+            <i class="fas fa-trophy icon-style"></i>
             <div class="d-flex flex-column">
-              <h3>Success Stories</h3>
-              <p>See how inspiring entrepreneurs are making a change.</p>
+              <h3>100+ Success Stories</h3>
+              <p>Fundeat has helped more than 100 restaurant owners to successfully fund their business development plans.</p>
             </div>
           </div>
 
@@ -67,11 +67,6 @@
 
         </div>
       </div>
-
-      <div class="w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
-      </div>
-
-
 
       <!-- horizontal line -->
       <div class="w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
