updated homepage divs

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -91,35 +91,37 @@
 
 
 <div class="">
-  <div class="row pt-5">
-    <div class="d-flex mt-2 align-items-center">
-      <!-- <img class="col-6 pic-home w-50 object-fit-cover" src="https://images.unsplash.com/photo-1470784790053-6c2f15489967?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2241&q=80" alt="home pic 1"> -->
+  <div class="row px-5" style="height: 375px">
+    <div class="d-flex mt-2 align-items-center justify-content-around">
+      <!-- <img class="col-6 pic-home  style="width: 45%"object-fit-cover" src="https://images.unsplash.com/photo-1470784790053-6c2f15489967?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2241&q=80" alt="home pic 1"> -->
+
       <%= image_tag "chef.svg", class:"col-3 p-5 ml-5" %>
-      <div class="mx-5 pr-5">
+      <div class="mx-5 pr-5" style="width: 45%">
         <h1 class="mb-4">Support entrepreneurs on a mission</h1>
         <p>Take a look at live investment opportunities on Fundeat today, and give yourself a feel-good factor that's hard to beat by backing a restaurant you believe in.</p>
       </div>
     </div>
   </div>
 
-  <div class="row" style="background-color: #f3f3f3;">
-    <div class="d-flex align-items-center">
-      <div class="mx-5 pl-5">
+  <div class="row px-5" style="background-color: #f3f3f3; height: 375px">
+    <div class="d-flex align-items-center justify-content-around">
+      <div class="mx-5 pl-5" style="width: 45%">
         <h1 class="mb-4">Create change in your community</h1>
         <p>Build a better neighboorhoud, a better city and a better country. Change happens when people feel empowered. Take an active role and make dreams come true.</p>
       </div>
-      <!-- <img class="pic-home ml-3 flex-grow-0 w-50 object-fit-cover" src="https://images.unsplash.com/photo-1491438590914-bc09fcaaf77a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="home pic 2"> -->
+      <!-- <img class="pic-home ml-3 flex-grow-0  style="width: 45%"object-fit-cover" src="https://images.unsplash.com/photo-1491438590914-bc09fcaaf77a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="home pic 2"> -->
       <%= image_tag "world.svg", class:"col-3", style:"margin-right: 128px; padding: 32px 64px;" %>
     </div>
   </div>
 
-  <div class="row">
-    <div class="d-flex align-items-center">
-      <!-- <img class="col-6 pic-home w-50 object-fit-cover" src="https://images.unsplash.com/photo-1470784790053-6c2f15489967?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2241&q=80" alt="home pic 1"> -->
+  <div class="row px-5" style="height: 375px">
+    <div class="d-flex mt-2 align-items-center justify-content-around">
+
+      <!-- <img class="col-6 pic-home  style="width: 45%"object-fit-cover" src="https://images.unsplash.com/photo-1470784790053-6c2f15489967?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2241&q=80" alt="home pic 1"> -->
       <%= image_tag "invest.svg", class:"col-3 p-5 ml-5" %>
-      <div class="mx-5 pr-5">
-        <h1 class="mb-4">Fiancially benefit from sustainable returns</h1>
-        <p>Take a look at live investment opportunities on Fundeat today, and give yourself a feel-good factor that's hard to beat by backing a restaurant you believe in.</p>
+      <div class="mx-5 pr-5" style="width: 45%">
+        <h1 class="mb-4">Be a local fundrasing hero</h1>
+        <p>It takes true ambition, courage and determination to leave a mark on the world, big or small. You have the chance to inspire us all.</p>
       </div>
     </div>
   </div>
