--- a/app/views/shared/_myinvestmentopen_card.html.erb
+++ b/app/views/shared/_myinvestmentopen_card.html.erb
@@ -9,15 +9,16 @@
     </div>
   <% else %>
 
-    <h2 class="mt-4"> Your opened investments, waiting to be launched!</h2>
+    <h2 class="mt-4">Your investments in <em>open</em> campaigns</h2>
     <table class="table mt-4 text-center">
       <thead class="table-secondary">
         <tr>
           <th scope="col">Restaurant Campaign</th>
-          <th scope="col">Int Rate</th>
-          <th scope="col">Invest. Date</th>
+          <th scope="col">Investment Date</th>
+          <th scope="col">Interest Rate</th>
+          <th scope="col">Loan duration</th>
           <th scope="col">Your investment</th>
-          <th scope="col">Days to launch </th>
+          <th scope="col">Day until closing</th>
         </tr>
       </thead>
 
@@ -27,8 +28,9 @@
            <tr class="<%= index.odd? ? 'bg-light' : '' %>">
             <!-- <th scope="row"><%= investment.id %></th> -->
             <td><%= link_to investment.campaign.company.name, campaign_path(investment.campaign),class: "wrapper-link2" %></td>
+            <td><%= investment.payment_date&.strftime("%B %e, %Y") %></td>
             <td><%= (investment.campaign.return_rate*100).round(1) %> %</td>
-            <td><%= investment.payment_date&.strftime("%m/%d/%Y") %></td>
+            <td><%= investment.campaign.loan_duration %> months</td>
             <td>$ <%= number_with_delimiter(investment.amount, :delimiter => ',') %> </td>
 
             <% if days_left >= 2 %>
@@ -44,6 +46,7 @@
 
           <tr class="table-active">
             <td>Total</td>
+            <td></td>
             <td></td>
             <td></td>
             <td>$ <%= number_with_delimiter(@sum_open_campaign_amount, :delimiter => ',') %></td>
