--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -26,6 +26,16 @@
   padding: 10px;
 }
 
+.alarm-m-square {
+  width: 30px;
+  height: 30px;
+
+  border-radius: 15px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: 1px solid grey;
+  background: #F3F3F3;
+  padding: 10px;
+}
 
 
 // Your avatar for owner dashboard - investors page
