restyle of inv dashboard

--- a/app/views/investments/dashboard.html.erb
+++ b/app/views/investments/dashboard.html.erb
@@ -6,66 +6,93 @@
     </div>
 
     <div class="col-md-10 col-lg-10 p-0">
+      <div class="text-center mt-5">
+        <h4>Welcome to your dashboard, <strong><%= current_user.first_name %>! </gstrong></h4>
+        </div>
 
-      <h2 class="m-4"> Welcome to your dashboard <%= current_user.first_name %>!</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 mt-4">
+              <div class="row">
+                <div class="col">
+                  <div class="card-campaign-status kpibox kpibox-green m-4">
+                    <div class="d-flex mt-4 justify-content-around align-items-center">
+                      <div class="text-center">
+                        <h2 class="m-3 kpidash">$<%= number_with_delimiter(@investments.sum(:amount), :delimiter => ',')%></h2>
+                        <h2 class="text-secondary mb-2" style="font-size: 20px;">Invested</h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card-campaign-status kpibox kpibox-green m-4">
+                    <div class="d-flex mt-4 justify-content-around align-items-center">
+                      <div class="text-center">
+                        <h2 class="m-3 kpidash">$<%= number_with_delimiter(@investments.last.amount, :delimiter => ',')%></h2>
+                        <h2 class="text-secondary mb-2" style="font-size: 20px;">Last invested</h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card-campaign-status kpibox kpibox-green m-4">
+                    <div class="d-flex mt-4 justify-content-around align-items-center">
+                      <div class="text-center">
+                        <h2 class="m-3 kpidash"><%= @avge_int_rate*100.round(0)%>% </h2>
+                        <h2 class="text-secondary mb-2" style="font-size: 20px;">Avg. Return</h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card-campaign-status kpibox kpibox-green m-4">
+                    <div class="d-flex mt-4 justify-content-around align-items-center">
+                      <div class="text-center">
+                        <h2 class="m-3 kpidash"><%= @investments.where.not(payment_date: nil).count%></h2>
+                        <p class="text-secondary mb-2" style="font-size: 20px;">Investments</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card-campaign-status kpibox kpibox-green m-4">
+                    <div class="d-flex mt-4 justify-content-around align-items-center">
+                      <div class="text-center">
+                        <h2 class="m-3 kpidash">Missing</h2>
+                        <p class="text-secondary mb-2" style="font-size: 20px;">Av. Duration</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
 
-      <!-- KPIs BOX-->
-      <div class="d-flex justify-content-between align-items-center mr-4 mt-4" style="height: 150px;" id="page-content-wrapper">
-        <!-- Insert cardsinfo -->
-        <div class="card-campaign-status kpibox m-5">
-          <div class="d-flex mt-4 justify-content-around align-items-center">
-            <div class="text-center">
-              <h2 class="m-3 kpidash"><%= number_with_delimiter(@investments.sum(:amount), :delimiter => ',')%></h2>
-              <h2 class="text-secondary mb-2" style="font-size: 20px;">$ Invested</h2>
+            <div class="col-md-8">
+              <!-- graph 1 -->
+              <div class="item-dash my-3">
+                <h6 class="text-center">$ Invested over time</h6>
+                <%= column_chart @investments.group(:payment_date).sum(:amount), colors: ["lightgrey"], xtitle: "Time", ytitle: "$ invested", min: nil, max: nil%>
+              </div>
+
+              <!-- calendar -->
+              <div class="col-md-4 mt-4">
+
+              </div>
+
             </div>
           </div>
+
+
         </div>
 
-        <div class="card-campaign-status kpibox m-5">
-          <div class="d-flex mt-4 justify-content-around align-items-center">
-            <div class="text-center">
-              <h2 class="m-3 kpidash"><%= number_with_delimiter(@investments.last.amount, :delimiter => ',')%></h2>
-              <h2 class="text-secondary mb-2" style="font-size: 20px;">$ Last investment</h2>
-            </div>
+        <div class="d-flex graph-container">
+          <div class="graph-bar">
+            <canvas data-graph="<%= JSON.generate(@graph_data_bar) %>" id="bar" ></canvas>
           </div>
-        </div>
-
-        <div class="card-campaign-status kpibox m-5">
-          <div class="d-flex mt-4 justify-content-around align-items-center">
-            <div class="text-center">
-              <h2 class="m-3 kpidash"><%= @avge_int_rate*100.round(0)%></h2>
-              <h2 class="text-secondary mb-2" style="font-size: 20px;">% Avge Return</h2>
-            </div>
+          <div class="graph-pie">
+            <canvas data-graph="<%= JSON.generate(@graph_data_pie) %>" id="pie"></canvas>
           </div>
-        </div>
-
-        <div class="card-campaign-status kpibox m-5">
-          <div class="d-flex mt-4 justify-content-around align-items-center">
-            <div class="text-center">
-              <h2 class="m-3 kpidash"><%= @investments.where.not(payment_date: nil).count%></h2>
-              <h2><img style="height: 45px;" src="https://img.icons8.com/carbon-copy/100/000000/restaurant.png"></h2>
-              <p class="text-secondary mb-2" style="font-size: 12px;"></p>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-
-      <div class="d-flex graph-container">
-        <div class="graph-bar">
-          <canvas data-graph="<%= JSON.generate(@graph_data_bar) %>" id="bar" ></canvas>
-        </div>
-        <div class="graph-pie">
-          <canvas data-graph="<%= JSON.generate(@graph_data_pie) %>" id="pie"></canvas>
         </div>
       </div>
     </div>
   </div>
-</div>
-
-
-
-    <!-- Reorganize -->
-
-
